# roastcraft_tauri

./: .gitignore  README.md  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  vite.config.ts
machines/: http.toml  modbus.toml
machines/tasi/: ta612c.toml
src/: Annotation.tsx  App.tsx  AppState.ts  DashboardPanel.tsx  MainChart.tsx  NotesPanel.tsx  PhaseChart.tsx  RangeInput.tsx  SecondaryChart.tsx  SettingsPanel.tsx  ToolTip.tsx  WorkerFactory.ts  calculate.ts  fileUtil.ts  index.css  timer.worker.ts
src-tauri/: Cargo.toml  roastcraft.toml  roastcraft_all_options.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: config.rs  devices.rs  main.rs
src-tauri/src/devices/: http.rs  modbus.rs  ta612c.rs
