# SPDX-License-Identifier: GPL-3.0-or-later

[package]
    name = "roastcraft"
    version = "0.1.1"
    description = "A Tauri App"
    authors = [
        "chihpingkuo",
    ]
    license = "GPL-3.0"
    repository = ""
    edition = "2021"

    # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
    tauri-build = { version = "1.5", features = [
    ] }

[dependencies]
    tauri = { version = "1.5", features = [ "fs-all", "cli",
        "window-all",
        "dialog-all",
        "shell-open",
    ] }
    serde = { version = "1.0", features = [ "derive", ] }
    serde_json = "1.0"
    tauri-plugin-log = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1", features = [
        "colored",
    ] }
    log = "0.4"
    tokio = { version = "1.34.0", features = [ "full", ] }
    async-trait = "0.1.74"
    toml = { version = "0.8.8", features = ["preserve_order",] }
    reqwest = "0.11.22"
    serialport = "4.3.0"
    rmodbus = "0.8.0"

[features]
    # this feature is used for production builds or when `devPath` points to the filesystem
    # DO NOT REMOVE!!
    custom-protocol = [
        "tauri/custom-protocol",
    ]
